--- a/Cibertec.Angular/Views/Shared/_Layout.cshtml
+++ b/Cibertec.Angular/Views/Shared/_Layout.cshtml
@@ -26,7 +26,8 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a ng-if="!vm.validate()" ui-sref="login" ui-sref-active="active">Login</a></li>
-                    <li><a ng-if="vm.validate()" ng-click="vm.logout()"href="#" ui-sref-active="active">Logout</a></li>
+                    <li><a ng-if="vm.validate()" ng-click="vm.logout()" href="#" ui-sref-active="active">Logout</a></li>
+                    <li><a ng-if="vm.validate()" ui-sref="product" ui-srefactive="active">Product</a></li>
                 </ul>
             </div>
         </div>
@@ -42,19 +43,29 @@
     <environment include="Development">
         <script src="~/libraries/jquery/jquery.js"></script>
         <script src="~/libraries/bootstrap/js/bootstrap.js"></script>
+
         <script src="~/libraries/angular/angular.js"></script>
         <script src="~/libraries/angular/angular-ui-router.js"></script>
         <script src="~/libraries/angular/angular-local-storage.js"></script>
+        <script src="~/libraries/angular/ui-bootstrap-tpls-2.5.0.js"></script>        
 
         <script src="~/app/app.js"></script>
         <script src="~/app/app.config.js"></script>
-        <script src="~/app/app.routes.js"></script>
         <script src="~/app/app.controller.js"></script>
+        <script src="~/app/app.routes.js"></script>
+        <script src="~/app/app.interceptor.js"></script>
 
         <script src="~/app/shared/data.service.js"></script>
-        <script src="~/app/shared/authentication.service.js"></script>        
+        <script src="~/app/shared/authentication.service.js"></script>
         <script src="~/app/shared/settings.service.js"></script>
+
         <script src="~/app/public/login/login.controller.js"></script>
+
+        <script src="~/app/components/modal/modal.directive.js"></script>
+
+        <script src="~/app/private/product/directives/product-card/product.card.js"></script>
+        <script src="~/app/private/product/directives/product-form/product.form.js"></script>
+        <script src="~/app/private/product/product.controller.js"></script>
     </environment>
 </body>
 </html>
