Se creo los formularios para las tablas customer, product , order, order Item y Suppliers con Angular

--- a/Cibertec.Angular/Sass/site.scss
+++ b/Cibertec.Angular/Sass/site.scss
@@ -3,3 +3,6 @@
 @import 'base/site';
 @import 'directives/product-card';
 @import 'directives/customer-card';
+@import 'directives/supplier-card';
+@import 'directives/order-card';
+@import 'directives/orderitem-card';
