--- a/Cibertec.Angular/wwwroot/css/site.css
+++ b/Cibertec.Angular/wwwroot/css/site.css
@@ -61,3 +61,69 @@
       .customer-card .buttons-controls {
         padding-bottom: 1.3rem; } }
 
+.supplier-card {
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 1rem;
+  margin-top: .5rem;
+  margin-top: .5rem;
+  height: 200px; }
+  @media (min-width: 768px) {
+    .supplier-card {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      margin-left: 2rem;
+      margin-right: 2rem;
+      height: 230px; } }
+  .supplier-card .buttons-controls {
+    bottom: 0;
+    position: absolute;
+    padding-bottom: 1rem; }
+    @media (min-width: 768px) {
+      .supplier-card .buttons-controls {
+        padding-bottom: 1.3rem; } }
+
+.order-card {
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 1rem;
+  margin-top: .5rem;
+  margin-top: .5rem;
+  height: 200px; }
+  @media (min-width: 768px) {
+    .order-card {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      margin-left: 2rem;
+      margin-right: 2rem;
+      height: 230px; } }
+  .order-card .buttons-controls {
+    bottom: 0;
+    position: absolute;
+    padding-bottom: 1rem; }
+    @media (min-width: 768px) {
+      .order-card .buttons-controls {
+        padding-bottom: 1.3rem; } }
+
+.orderitem-card {
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 1rem;
+  margin-top: .5rem;
+  margin-top: .5rem;
+  height: 200px; }
+  @media (min-width: 768px) {
+    .orderitem-card {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      margin-left: 2rem;
+      margin-right: 2rem;
+      height: 230px; } }
+  .orderitem-card .buttons-controls {
+    bottom: 0;
+    position: absolute;
+    padding-bottom: 1rem; }
+    @media (min-width: 768px) {
+      .orderitem-card .buttons-controls {
+        padding-bottom: 1.3rem; } }
+
